# webgraph-viz

./: .gitignore  README.md  docker-compose.yml  webgraph.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/backend/: api.py  crawler.py  graph.py  main.py  models.py  seo.py  storage.py  ws.py
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts  types.ts
frontend/src/components/: AdviceList.tsx  CrawlForm.tsx  CustomNode.tsx  GraphCanvas.tsx  HistoryDrawer.tsx  InsightsDrawer.tsx  RankingsDrawer.tsx  RankingsPanel.tsx  Sidebar.tsx  TreeView.tsx
frontend/src/hooks/: useCrawlSocket.ts
frontend/src/lib/: advice.ts  api.ts  layout.ts  report.ts  seo.ts
