[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend that crawls a website and streams the link graph over WebSocket."
authors = [
    { name = "BeastOfShadow", email = "simone.negro.2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "selectolax>=0.4.8",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "ASYNC",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
